--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/restdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/gulbazardb
 spring.datasource.username=testuser2
-spring.datasource.password=1hubflz6uvn13dgt6
+spring.datasource.password=1234
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
